// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/segmented/demo/basic.vue correctly 1`] = `
<div class="xy-segmented ">
  <div class="xy-segmented-group">
    <!----><label class="xy-segmented-item xy-segmented-item-selected"><input class="xy-segmented-item-input" type="radio">
      <div class="xy-segmented-item-label" title="Daily">Daily</div>
    </label><label class="xy-segmented-item"><input class="xy-segmented-item-input" type="radio">
      <div class="xy-segmented-item-label" title="Weekly">Weekly</div>
    </label><label class="xy-segmented-item"><input class="xy-segmented-item-input" type="radio">
      <div class="xy-segmented-item-label" title="Monthly">Monthly</div>
    </label><label class="xy-segmented-item"><input class="xy-segmented-item-input" type="radio">
      <div class="xy-segmented-item-label" title="Quarterly">Quarterly</div>
    </label><label class="xy-segmented-item"><input class="xy-segmented-item-input" type="radio">
      <div class="xy-segmented-item-label" title="Yearly">Yearly</div>
    </label>
  </div>
</div>
`;

exports[`renders ./components/segmented/demo/block.vue correctly 1`] = `
<div class="xy-segmented  xy-segmented-block">
  <div class="xy-segmented-group">
    <!----><label class="xy-segmented-item xy-segmented-item-selected"><input class="xy-segmented-item-input" type="radio">
      <div class="xy-segmented-item-label" title="123">123</div>
    </label><label class="xy-segmented-item"><input class="xy-segmented-item-input" type="radio">
      <div class="xy-segmented-item-label" title="456">456</div>
    </label><label class="xy-segmented-item"><input class="xy-segmented-item-input" type="radio">
      <div class="xy-segmented-item-label" title="longtext-longtext-longtext-longtext">longtext-longtext-longtext-longtext</div>
    </label>
  </div>
</div>
`;

exports[`renders ./components/segmented/demo/custom.vue correctly 1`] = `
<br>
<br>
`;

exports[`renders ./components/segmented/demo/disabled.vue correctly 1`] = `
<div>
  <div class="xy-segmented  xy-segmented-disabled">
    <div class="xy-segmented-group">
      <!----><label class="xy-segmented-item-disabled xy-segmented-item xy-segmented-item-selected"><input class="xy-segmented-item-input" type="radio" disabled="">
        <div class="xy-segmented-item-label" title="Map">Map</div>
      </label><label class="xy-segmented-item-disabled xy-segmented-item"><input class="xy-segmented-item-input" type="radio" disabled="">
        <div class="xy-segmented-item-label" title="Transit">Transit</div>
      </label><label class="xy-segmented-item-disabled xy-segmented-item"><input class="xy-segmented-item-input" type="radio" disabled="">
        <div class="xy-segmented-item-label" title="Satellite">Satellite</div>
      </label>
    </div>
  </div><br><br>
  <div class="xy-segmented ">
    <div class="xy-segmented-group">
      <!----><label class="xy-segmented-item xy-segmented-item-selected"><input class="xy-segmented-item-input" type="radio">
        <div class="xy-segmented-item-label" title="Daily">Daily</div>
      </label><label class="xy-segmented-item-disabled xy-segmented-item"><input class="xy-segmented-item-input" type="radio" disabled="">
        <div class="xy-segmented-item-label" title="">
          <!---->
        </div>
      </label><label class="xy-segmented-item"><input class="xy-segmented-item-input" type="radio">
        <div class="xy-segmented-item-label" title="Monthly">Monthly</div>
      </label><label class="xy-segmented-item-disabled xy-segmented-item"><input class="xy-segmented-item-input" type="radio" disabled="">
        <div class="xy-segmented-item-label" title="">
          <!---->
        </div>
      </label><label class="xy-segmented-item"><input class="xy-segmented-item-input" type="radio">
        <div class="xy-segmented-item-label" title="Yearly">Yearly</div>
      </label>
    </div>
  </div>
</div>
`;

exports[`renders ./components/segmented/demo/dynamic.vue correctly 1`] = `
<div class="xy-segmented ">
  <div class="xy-segmented-group">
    <!----><label class="xy-segmented-item xy-segmented-item-selected"><input class="xy-segmented-item-input" type="radio">
      <div class="xy-segmented-item-label" title="Daily">Daily</div>
    </label><label class="xy-segmented-item"><input class="xy-segmented-item-input" type="radio">
      <div class="xy-segmented-item-label" title="Weekly">Weekly</div>
    </label><label class="xy-segmented-item"><input class="xy-segmented-item-input" type="radio">
      <div class="xy-segmented-item-label" title="Monthly">Monthly</div>
    </label>
  </div>
</div>
<br>
<br>
<button class="xy-btn xy-btn-primary" type="button">
  <!----><span>Load More</span>
</button>
`;

exports[`renders ./components/segmented/demo/size.vue correctly 1`] = `
<div class="xy-segmented  xy-segmented-lg">
  <div class="xy-segmented-group">
    <!----><label class="xy-segmented-item xy-segmented-item-selected"><input class="xy-segmented-item-input" type="radio">
      <div class="xy-segmented-item-label" title="Daily">Daily</div>
    </label><label class="xy-segmented-item"><input class="xy-segmented-item-input" type="radio">
      <div class="xy-segmented-item-label" title="Weekly">Weekly</div>
    </label><label class="xy-segmented-item"><input class="xy-segmented-item-input" type="radio">
      <div class="xy-segmented-item-label" title="Monthly">Monthly</div>
    </label><label class="xy-segmented-item"><input class="xy-segmented-item-input" type="radio">
      <div class="xy-segmented-item-label" title="Quarterly">Quarterly</div>
    </label><label class="xy-segmented-item"><input class="xy-segmented-item-input" type="radio">
      <div class="xy-segmented-item-label" title="Yearly">Yearly</div>
    </label>
  </div>
</div>
<br>
<br>
<div class="xy-segmented ">
  <div class="xy-segmented-group">
    <!----><label class="xy-segmented-item xy-segmented-item-selected"><input class="xy-segmented-item-input" type="radio">
      <div class="xy-segmented-item-label" title="Daily">Daily</div>
    </label><label class="xy-segmented-item"><input class="xy-segmented-item-input" type="radio">
      <div class="xy-segmented-item-label" title="Weekly">Weekly</div>
    </label><label class="xy-segmented-item"><input class="xy-segmented-item-input" type="radio">
      <div class="xy-segmented-item-label" title="Monthly">Monthly</div>
    </label><label class="xy-segmented-item"><input class="xy-segmented-item-input" type="radio">
      <div class="xy-segmented-item-label" title="Quarterly">Quarterly</div>
    </label><label class="xy-segmented-item"><input class="xy-segmented-item-input" type="radio">
      <div class="xy-segmented-item-label" title="Yearly">Yearly</div>
    </label>
  </div>
</div>
<br>
<br>
<div class="xy-segmented  xy-segmented-sm">
  <div class="xy-segmented-group">
    <!----><label class="xy-segmented-item xy-segmented-item-selected"><input class="xy-segmented-item-input" type="radio">
      <div class="xy-segmented-item-label" title="Daily">Daily</div>
    </label><label class="xy-segmented-item"><input class="xy-segmented-item-input" type="radio">
      <div class="xy-segmented-item-label" title="Weekly">Weekly</div>
    </label><label class="xy-segmented-item"><input class="xy-segmented-item-input" type="radio">
      <div class="xy-segmented-item-label" title="Monthly">Monthly</div>
    </label><label class="xy-segmented-item"><input class="xy-segmented-item-input" type="radio">
      <div class="xy-segmented-item-label" title="Quarterly">Quarterly</div>
    </label><label class="xy-segmented-item"><input class="xy-segmented-item-input" type="radio">
      <div class="xy-segmented-item-label" title="Yearly">Yearly</div>
    </label>
  </div>
</div>
`;
